Fix top offset of docs sidebar on mobile

--- a/src/scss/pages/page-docs.scss
+++ b/src/scss/pages/page-docs.scss
@@ -14,7 +14,7 @@ $sidebar-width: 320px;
 .sidebar {
   height: 0;
   position: sticky;
-  top: 4rem;
+  top: 6rem;
   transform: translateX(-$sidebar-width);
   transition: transform 0.15s linear;
   width: 0;
@@ -22,7 +22,7 @@ $sidebar-width: 320px;
 
   @media screen and (min-width: 860px) {
     flex: 0 0 $sidebar-width;
-    height: calc(100vh - 4rem);
+    height: calc(100vh - 6rem);
     transform: translateX(0);
     vertical-align: top;
     width: $sidebar-width;
